<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/lines_margin"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_device_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lines_margin"
        android:text="@string/settings_device_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_device_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_device_subtitle">

        <ImageButton
            android:id="@+id/settings_device_refresh"
            android:layout_width="@dimen/lines_height_inner"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:backgroundTint="@color/teal_medium"
            android:contentDescription="@string/settings_device_refresh"
            android:elevation="3dp"
            android:src="@drawable/ic_refresh_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_device_recycler"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/settings_device_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_device_recycler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:clickable="false"
            android:contentDescription="@string/settings_device_swipe"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_device_refresh"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/string_choice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_drive_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lines_margin"
        android:text="@string/settings_drive_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_device_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_drive_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_drive_subtitle">

        <TextView
            android:id="@+id/settings_arcade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_drive_arcade"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/settings_mode"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/settings_arcade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_tank"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_drive_tank"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/settings_arcade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_mode"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_reference_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lines_margin"
        android:text="@string/settings_reference_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_drive_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_reference_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_reference_subtitle">

        <TextView
            android:id="@+id/settings_field"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_reference_field"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_reference"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/settings_reference"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/settings_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_robot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_reference_robot"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/settings_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_reference"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_motors_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lines_margin"
        android:text="@string/settings_motors_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_reference_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_motors_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_motors_subtitle">

        <TextView
            android:id="@+id/settings_motors_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_motors_left"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/settings_motors_left_wheel"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_motors_left_wheel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:contentDescription="@string/settings_motors_left"
            android:scrollbars="vertical"
            android:textSize="@dimen/font_size"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/settings_motors_left"
            app:layout_constraintRight_toLeftOf="@+id/settings_motors_right"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/string_choice" />

        <TextView
            android:id="@+id/settings_motors_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center"
            android:text="@string/settings_motors_right"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/settings_motors_left_wheel"
            app:layout_constraintRight_toLeftOf="@+id/settings_motors_right_wheel"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_motors_right_wheel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:contentDescription="@string/settings_motors_right"
            android:scrollbars="vertical"
            android:textSize="@dimen/font_size"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/settings_motors_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/string_choice" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lines_margin"
        android:text="@string/settings_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>