<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controller_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.controller.ControllerFragment">

    <!-- ───────────────────────────  S T A T U S  ─────────────────────-──────────── -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controller_status"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_lines_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/controller_status_connect_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center_vertical"
            android:text="@string/controller_status_connect"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/controller_status_connect_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/controller_status_connect_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:contentDescription="@string/controller_status_connect_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/controller_status_mode_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/controller_status_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:gravity="center_vertical"
            android:text="@string/controller_status_mode"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/controller_status_mode_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/controller_status_mode_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lines_margin"
            android:contentDescription="@string/controller_status_mode_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/settings_status_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controller_status" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controller_motors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lines_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_status_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controller_retry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/controller_wheels"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/controller_wheels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/controller_retry_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/lines_margin"
                android:backgroundTint="@color/teal_dark"
                android:contentDescription="@string/settings_device_refresh"
                android:elevation="3dp"
                android:src="@drawable/ic_refresh_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controller_wheels"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/controller_attachments"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/controller_attachments"
            app:layout_constraintStart_toEndOf="@+id/controller_retry"
            app:layout_constraintTop_toTopOf="parent">

            <!-- ─────────────────────────────  L E V E R S  ──────────────────────────────── -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controller_levers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <org.mantabots.robosoccer.ui.views.LeverView
                    android:id="@+id/controller_levers_left"
                    android:layout_width="@dimen/motor_lever"
                    android:layout_height="@dimen/motor_lever"
                    android:layout_margin="@dimen/lines_margin"
                    app:LV_knobColor="@color/teal_dark"
                    app:LV_railColor="@color/teal_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/controller_levers_right"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/controller_levers_left_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/controller_levers_right"
                    app:layout_constraintTop_toTopOf="parent" />

                <org.mantabots.robosoccer.ui.views.LeverView
                    android:id="@+id/controller_levers_right"
                    android:layout_width="@dimen/motor_lever"
                    android:layout_height="@dimen/motor_lever"
                    android:layout_margin="@dimen/lines_margin"
                    android:rotation="90"
                    app:LV_knobColor="@color/teal_dark"
                    app:LV_railColor="@color/teal_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/controller_levers_left"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/controller_levers_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/controller_levers_left"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- ───────────────────────────  J O Y S T I C K  ────────────────────────────── -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controller_joystick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <org.mantabots.robosoccer.ui.views.JoystickView
                    android:id="@+id/controller_joystick_joystick"
                    android:layout_width="@dimen/motor_joystick"
                    android:layout_height="@dimen/motor_joystick"
                    android:layout_margin="@dimen/lines_margin"
                    app:JV_borderColor="@color/teal_medium"
                    app:JV_buttonColor="@color/teal_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/controller_joystick_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controller_attachments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/controller_wheels"
            app:layout_constraintStart_toEndOf="@+id/controller_wheels"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controller_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/controller_second"
                app:layout_constraintHeight_max="@dimen/attachments_lever"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="@dimen/attachments_lever">

                <org.mantabots.robosoccer.ui.views.LeverView
                    android:id="@+id/controller_first_lever"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    app:LV_knobColor="@color/teal_dark"
                    app:LV_railColor="@color/teal_medium"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/controller_first_lever_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controller_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_max="@dimen/attachments_lever"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/controller_first"
                app:layout_constraintWidth_max="@dimen/attachments_lever">

                <org.mantabots.robosoccer.ui.views.LeverView
                    android:id="@+id/controller_second_lever"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    app:LV_knobColor="@color/teal_dark"
                    app:LV_railColor="@color/teal_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/controller_second_lever_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/lines_margin"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>